--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "antd": "^5.14.1",
+    "axios": "^1.6.7",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1",
     "webpack-dev-server": "^4.13.2"
   },
   "description": ""
