--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
     "antd": "^5.14.1",
     "axios": "^1.6.7",
     "lodash": "^4.17.21",
