fixing for prod

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
-REACT_APP_HOST = "http://localhost:8000"
+DJANGO_SETTINGS_MODULE=my_project.settings.local
+DEBUG=True
+SECRET_KEY=1s7(e30sms5)0^oj)8nr1-^93urla_9s$%6f9yyw$y-rq1zb9
+
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=postgrespw
+DB_HOST=database-2.cbsa6ky6w2y5.eu-north-1.rds.amazonaws.com
+DB_PORT=5432
+DEV_ENV=local
