--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.7.2
+certifi==2024.2.2
 Django==5.0.2
 psycopg2==2.9.9
+python-decouple==3.8
+sentry-sdk==1.40.5
 sqlparse==0.4.4
+urllib3==2.2.1
